fixing scroll prompt on safari

--- a/src/index.css
+++ b/src/index.css
@@ -251,6 +251,8 @@ video#bgvid {
   font-size: 9px;
   letter-spacing: 1px;
   bottom: 10px;
+  left: 0;
+  right: 0;
   position: absolute;
   margin: 0 auto;
   width: 100%;
